= Changelog

== Unreleased

== v1.1.32 - 2022-09-23 [[v1.1.32]]

* utc for changelog date

https://github.com/lread/muckabout/compare/Release-1.1.31\...Release-1.1.32[commit log]

== v1.1.31 - 2022-09-23 [[v1.1.31]]

* changes

https://github.com/lread/muckabout/compare/Release-1.1.30\...Release-1.1.31[commit log]

== v1.1.30 - 2022-09-23 [[v1.1.30]]

* oh me typos!

https://github.com/lread/muckabout/compare/Release-1.1.29\...Release-1.1.30[commit log]

== v1.1.29 - 2022-09-23 [[v1.1.29]]

* booboo fixed

https://github.com/lread/muckabout/compare/Release-1.1.28\...Release-1.1.29[commit log]

== v1.1.28 - 2022-09-23 [[v1.1.28]]

* missed some stuff

https://github.com/lread/muckabout/compare/Release-1.1.27\...Release-1.1.28[commit log]

== v1.1.27 - 2022-09-23 [[v1.1.27]]

* back to playing on github actions

https://github.com/lread/muckabout/compare/Release-1.1.26\...Release-1.1.27[commit log]

== v1.1.26 - 2022-09-22 [[v1.1.26]]

* jar signing on

https://github.com/lread/muckabout/compare/Release-1.1.25\...Release-1.1.26[commit log]

== v1.1.25 - 2022-09-22 [[v1.1.25]]

* jar signing off

https://github.com/lread/muckabout/compare/Release-1.1.24\...Release-1.1.25[commit log]

== v1.1.24 - 2022-09-22 [[v1.1.24]]

* project corrections

https://github.com/lread/muckabout/compare/Release-1.1.23\...Release-1.1.24[commit log]

== v1.1.23 - 2022-09-22 [[v1.1.23]]

* my my

https://github.com/lread/muckabout/compare/Release-1.1.22\...Release-1.1.23[commit log]

== v1.1.22 - 2022-09-22 [[v1.1.22]]

* try this, try that

https://github.com/lread/muckabout/compare/Release-1.1.21\...Release-1.1.22[commit log]

== v1.1.21 - 2022-09-22 [[v1.1.21]]

* more more more

https://github.com/lread/muckabout/compare/Release-1.1.20\...Release-1.1.21[commit log]

== v1.1.20 [minor breaking] - 2022-09-22 [[v1.1.20]]

* more breaks

https://github.com/lread/muckabout/compare/Release-1.1.19\...Release-1.1.20[commit log]

== v1.1.19 [breaking] - 2022-09-22 [[v1.1.19]]

* breaking typo
