@@ -1,12 +1,17 @@
 {:paths ["script"]
  :deps {lread/status-line {:git/url "https://github.com/lread/status-line.git"
-                           :sha "35ed39645038e81b42cb15ed6753b8462e60a06d"}}
+                           :sha "35ed39645038e81b42cb15ed6753b8462e60a06d"}
+        babashka/neil {:git/url "https://github.com/babashka/neil.git"
+                       :sha "6fc58cc6a4253c2c15f05135f1610ab3d46d961f"}}
  :tasks {;; setup
          :requires ([clojure.string :as string]
                     [lread.status-line :as status])
          :enter (let [{:keys [name]} (current-task)] (status/line :head "TASK %s %s" name (string/join " " *command-line-args*)))
          :leave (let [{:keys [name]} (current-task)] (status/line :detail "\nTASK %s done." name))
          ;; tasks
+         neil
+         {:doc "Pinned version of babashka/neil"
+          :task babashka.neil/-main}
          publish
          {:doc "Publish a release"
           :task publish/-main}
