@@ -2,6 +2,8 @@
 
 == Unreleased
 
+* fully qualify gh release
+
 == v1.1.32 - 2022-09-23 [[v1.1.32]]
 
 * utc for changelog date
